# substr8

./: .directory  Cargo.toml  Dockerfile  LICENSE  readme.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
