[package]
name = "substr8"
version = "0.1.0"
authors = ["Zach Childers<zach.childers@berkeley.educar>"]
edition = "2018"

[dependencies]
gotham = "0.4.0"
gotham_derive = "0.4.0"
futures = "0.1.28"
hyper = "0.12.33"
mime = "0.3.13"
lazy_static = "1.3.0"
rusoto_core = "0.40.0"
rusoto_secretsmanager = "0.40.0"
serde = {version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"